--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -12,10 +12,10 @@
 
                                 </li>
                                 <li>
-                                    <span class="contact-info-label">Số điện thoại</span><a href="tel:">0355540066</a>
+                                    <span class="contact-info-label">Số điện thoại</span><a href="tel:">0372241997</a>
                                 </li>
                                 <li>
-                                    <span class="contact-info-label">Email</span> <a href="mailto:mail@example.com">anhkhoa98nd@gmail.com</a>
+                                    <span class="contact-info-label">Email</span> <a href="mailto:mail@example.com">lethanh22041997@gmail.com</a>
                                 </li>
                                 <li>
                                     <span class="contact-info-label">Thời gian làm việc</span>
