--- a/src/main/resources/templates/shop/doi-hang.html
+++ b/src/main/resources/templates/shop/doi-hang.html
@@ -35,7 +35,7 @@
                     <p>- Khi đến đổi, quý khách vui lòng mang theo sản phẩm trong tình trạng chưa qua sử dụng.</p>
                 <h3 style="color:red;">Đối với khách hàng ở các tỉnh ngoài Hà Nội khi đặt hàng của Prince</h3>
                 <p>- Trong vòng 7 ngày kể từ ngày nhận hàng (Theo thời gian ghi trong hoá đơn, hoặc mã đơn hàng), quý khách được phép đổi size, đổi mẫu hoặc trả lại hàng và nhận lại tiền.</p>
-                <p>- Quý khách vui lòng thông báo trước về tình trạng sản phẩm, nguyên do đổi hàng qua inbox Fanpgage: http://facebook.com/tushoes.hn hoặc Hotline: 0968.585.135. Sau đó sẽ nhận được hướng dẫn từ đội ngũ hỗ trợ của Tu Shoes.</p>
+                <p>- Quý khách vui lòng thông báo trước về tình trạng sản phẩm, nguyên do đổi hàng qua inbox Fanpgage: http://facebook.com/thanhlha hoặc Hotline: 037.22.4.1997. Sau đó sẽ nhận được hướng dẫn từ đội ngũ hỗ trợ của Thanh Shoes.</p>
                 <p>- Trường hợp Sản phẩm lỗi do nhà sản xuất hoặc bên phía cửa hàng gửi nhầm Sản phẩm của Quý khách. Prince xin chịu hoàn toàn Phí Vận Chuyển để đảm bảo quý khách có một Sản phẩm tốt nhất.</p>
                 <h3 style="color: red">Lưu ý:</h3>
                 <p>- Những sản phẩm đã qua sử dụng thì sẽ không áp dụng đổi trả.</p>
