--- a/src/main/resources/templates/shop/lien-he.html
+++ b/src/main/resources/templates/shop/lien-he.html
@@ -80,11 +80,11 @@
             <div class="contact-info">
               <div>
                 <i class="icon-mobile"></i>
-                <p><a href="tel:">0355540066</a></p>
+                <p><a href="tel:">0372241997</a></p>
               </div>
               <div>
                 <i class="icon-mail-alt"></i>
-                <p><a href="mailto:#">anhkhoa98nd@gmail.com</a></p>
+                <p><a href="mailto:#">lethanh22041997@gmail.com</a></p>
               </div>
             </div>
             <!-- End .contact-info -->
