--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -8,7 +8,7 @@
                             <h4 class="widget-title">Về cửa hàng</h4>
                             <ul class="contact-info">
                                 <li>
-                                    <span class="contact-info-label">Địa chỉ</span>số 48 Phùng khoang, trung văn, Nam Từ Liêm, Hà  Nội.
+                                    <span class="contact-info-label">Địa chỉ</span>Giao Tác, Liên Hà, Đông Anh, Hà Nội.
 
                                 </li>
                                 <li>
