update code: update data, config kafka and background

--- a/src/main/resources/templates/admin/order/edit.html
+++ b/src/main/resources/templates/admin/order/edit.html
@@ -27,7 +27,7 @@
                         <i class="bx bx-home-alt"></i>
                     </a>
                 </li>
-                <li><a href="/admin/orders"><span>Thông tin đơn hàng</span></a></li>
+                <li><a href="/admin/orders/"><span>Thông tin đơn hàng</span></a></li>
                 <li><span th:text="'Đơn hàng ' + ${order.id}"></span></li>
             </ol>
             <a class="sidebar-right-toggle" data-open="sidebar-right"><i
@@ -47,7 +47,7 @@
                         <div class="mb-3">
                             <a href="/admin/orders" class="btn btn-primary"><i
                                     class="fas fa-chevron-left"></i> Trở về</a>
-                            <button type="button" id="addToTable" class="btn btn-primary btn-update-order">Cập nhật  <i
+                            <button  type="button" id="addToTable" class="btn btn-primary btn-update-order">Cập nhật  <i
                                     class="fas fa-plus"></i></button>
                         </div>
                     </div>
