--- a/src/main/resources/templates/admin/product/list.html
+++ b/src/main/resources/templates/admin/product/list.html
@@ -51,8 +51,8 @@
                                 class="fas fa-redo-alt"></i></a>
                         <button id="btn-search" class="btn btn-success">Tìm kiếm <i
                                 class="fas fa-search"></i></button>
-                        <!-- <button class="btn btn-warning btn_export"><a th:href="@{/api/products/export/excel}">Xuất dữ liệu</a>
-                            <i class="fas fa-file-export"></i></button> -->
+                        <button class="btn btn-warning btn_export"><a th:href="@{/api/products/export/excel}">Xuất dữ liệu</a>
+                            <i class="fas fa-file-export"></i></button>
 <!--                        <button id="btn-delete" onclick="warningBeforeDelete()" type="button" class="btn btn-danger" disabled>Xóa sản phẩm  <i-->
 <!--                                class="fas fa-trash-alt"></i></button>-->
                     </div>
