--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -7,7 +7,7 @@
                         <i class="icon-menu"></i>
                     </button>
                     <a href="/" class="logo">
-                        <img th:src="@{https://printgo.vn/uploads/media/772948/thiet-ke-logo-shop-giay-16_1584094948.jpg}"  alt="logo">
+                        <img th:src="@{https://thuthuatnhanh.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-den-dep-nhat.jpg}"  alt="logo">
                     </a>
                 </div><!-- End .header-left -->
 
