--- a/src/main/resources/templates/fragment/header_admin.html
+++ b/src/main/resources/templates/fragment/header_admin.html
@@ -3,7 +3,7 @@
     <div class="logo-container">
       <a href="/admin" class="logo">
         <img
-          th:src="@{https://printgo.vn/uploads/media/772948/thiet-ke-logo-shop-giay-16_1584094948.jpg}"
+          th:src="@{https://thuthuatnhanh.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-den-dep-nhat.jpg}"
           width="75"
           height="35"
           alt="Porto Admin"
