--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -21,7 +21,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      th:href="@{https://printgo.vn/uploads/media/772948/thiet-ke-logo-shop-giay-16_1584094948.jpg}"
+      th:href="@{https://thuthuatnhanh.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-den-dep-nhat.jpg}"
     />
     <!-- Plugins CSS File -->
     <link rel="stylesheet" th:href="@{/shop/css/bootstrap.min.css}" />
