--- a/src/main/resources/templates/layout/layout_admin.html
+++ b/src/main/resources/templates/layout/layout_admin.html
@@ -26,7 +26,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      th:href="@{https://printgo.vn/uploads/media/772948/thiet-ke-logo-shop-giay-16_1584094948.jpg}"
+      th:href="@{https://thuthuatnhanh.com/wp-content/uploads/2020/01/tong-hop-hinh-nen-den-dep-nhat.jpg}"
     />
     <link
       rel="stylesheet"
