--- a/src/main/resources/templates/shop/lien-he.html
+++ b/src/main/resources/templates/shop/lien-he.html
@@ -33,7 +33,7 @@
       <div class="container">
         <div id="map">
           <iframe
-            src="https://www.google.com/maps/place/Nội+Thất+Cao+Cấp+Đại+Thành/@21.1371869,105.9033476,17z/data=!3m1!4b1!4m6!3m5!1s0x3135071c23761751:0x96b28a93e99fbb50!8m2!3d21.1371869!4d105.9059225!16s%2Fg%2F11mhg_wtdb?hl=vi&entry=ttu"
+            src="https://www.google.com/maps/@9.7863257,105.6201763,11.03z?hl=vi-VN&entry=ttu"
             width="100%"
             height="100%"
             style="border: 0"
@@ -42,37 +42,37 @@
           ></iframe>
         </div>
         <!-- End #map -->
-
+<!--xử lý kafka-->
         <div class="row">
-          <!--            <div class="col-md-8">-->
-          <!--                <h2 class="light-title">Write <strong>Us</strong></h2>-->
+                      <div class="col-md-8">
+                          <h2 class="light-title">Phản hồi sản phẩm </h2>
 
-          <!--                <form action="#">-->
-          <!--                    <div class="form-group required-field">-->
-          <!--                        <label for="contact-name">Name</label>-->
-          <!--                        <input type="text" class="form-control" id="contact-name" name="contact-name" required>-->
-          <!--                    </div>&lt;!&ndash; End .form-group &ndash;&gt;-->
+                          <form action="#">
+                              <div class="form-group required-field">
+                                  <label for="contact-name">Họ và tên</label>
+                                  <input type="text" class="form-control" id="contact-name" name="contact-name" required>
+                              </div><!-- End .form-group -->
 
-          <!--                    <div class="form-group required-field">-->
-          <!--                        <label for="contact-email">Email</label>-->
-          <!--                        <input type="email" class="form-control" id="contact-email" name="contact-email" required>-->
-          <!--                    </div>&lt;!&ndash; End .form-group &ndash;&gt;-->
+                              <div class="form-group required-field">
+                                  <label for="contact-email">Email</label>
+                                  <input type="email" class="form-control" id="contact-email" name="contact-email" required>
+                              </div><!-- End .form-group -->
 
-          <!--                    <div class="form-group">-->
-          <!--                        <label for="contact-phone">Phone Number</label>-->
-          <!--                        <input type="tel" class="form-control" id="contact-phone" name="contact-phone">-->
-          <!--                    </div>&lt;!&ndash; End .form-group &ndash;&gt;-->
+                              <div class="form-group">
+                                <label for="contact-phone">Số điện thoại</label>
+                                  <input type="tel" class="form-control" id="contact-phone" name="contact-phone">
+                              </div><!-- End .form-group -->
 
-          <!--                    <div class="form-group required-field">-->
-          <!--                        <label for="contact-message">What’s on your mind?</label>-->
-          <!--                        <textarea cols="30" rows="1" id="contact-message" class="form-control" name="contact-message" required></textarea>-->
-          <!--                    </div>&lt;!&ndash; End .form-group &ndash;&gt;-->
+                              <div class="form-group required-field">
+                                  <label for="contact-message">Phản hồi</label>
+                                  <textarea cols="30" rows="1" id="contact-message" class="form-control" name="contact-message" required></textarea>
+                              </div><!-- End .form-group -->
 
-          <!--                    <div class="form-footer">-->
-          <!--                        <button type="submit" class="btn btn-primary">Submit</button>-->
-          <!--                    </div>&lt;!&ndash; End .form-footer &ndash;&gt;-->
-          <!--                </form>-->
-          <!--            </div>&lt;!&ndash; End .col-md-8 &ndash;&gt;-->
+                              <div class="form-footer">
+                                  <button type="submit" class="btn btn-primary">Submit</button>
+                              </div><!-- End .form-footer -->
+                          </form>
+                      </div><!-- End .col-md-8 -->
 
           <div class="col-md-4">
             <h2 class="light-title"><strong>Thông tin liên hệ</strong></h2>
