--- a/src/main/resources/templates/shop/product.html
+++ b/src/main/resources/templates/shop/product.html
@@ -21,20 +21,20 @@
 <main class="main" id="main-content">
     <div class="category-banner-container bg-gray">
         <div class="category-banner banner text-uppercase"
-             style="background: no-repeat 60%/cover url('shop/images/slider/giay1.jpg'); height: 450px">
+             style="background: no-repeat 60%/cover url('shop/images/slider/bia2.jpg'); height: 450px">
             <div class="container position-relative">
                 <div class="row">
                     <div class="pl-lg-5 pb-5 pb-md-0 col-md-5 col-xl-4 col-lg-4 offset-1">
-                        <!--                        <h3 class="ml-lg-5 mb-2 ls-10">Electronic<br>Deals</h3>-->
-                        <!--                        <a href="#" class="ml-lg-5 btn btn-dark btn-black ls-10">Get Yours!</a>-->
+<!--                                                <h3 class="ml-lg-5 mb-2 ls-10">Electronic<br>Deals</h3>-->
+<!--                                                <a href="#" class="ml-lg-5 btn btn-dark btn-black ls-10">Get Yours!</a>-->
                     </div>
-                    <!--                    <div class="pl-lg-5 col-md-4 offset-md-0 offset-1 pt-4">-->
-                    <!--                        <div class="coupon-sale-content">-->
-                    <!--                            <h4 class="m-b-2 coupon-sale-text bg-white ls-10 text-transform-none">Exclusive COUPON</h4>-->
-                    <!--                            <h5 class="mb-2 coupon-sale-text d-block ls-10 p-0"><i class="ls-0">UP TO</i><b-->
-                    <!--                                    class="text-dark">$100</b> OFF</h5>-->
-                    <!--                        </div>-->
-                    <!--                    </div>-->
+<!--                                        <div class="pl-lg-5 col-md-4 offset-md-0 offset-1 pt-4">-->
+<!--                                            <div class="coupon-sale-content">-->
+<!--                                                <h4 class="m-b-2 coupon-sale-text bg-white ls-10 text-transform-none">Exclusive COUPON</h4>-->
+<!--                                                <h5 class="mb-2 coupon-sale-text d-block ls-10 p-0"><i class="ls-0">UP TO</i><b-->
+<!--                                                        class="text-dark">$100</b> OFF</h5>-->
+<!--                                            </div>-->
+<!--                                        </div>-->
                 </div>
             </div>
         </div>
