update code: product view

--- a/src/main/resources/templates/shop/detail.html
+++ b/src/main/resources/templates/shop/detail.html
@@ -124,7 +124,8 @@
                                 <i class="fas dropdown-arrow"></i>
                             </button>
                         </div>
-                        <div class="buy-btn">
+<!--                        kiểm tra laại việc khai báo class but-btn-->
+                        <div class="buy-now">
                             <button class="btn btn-primary buy red-btn" th:classappend="${canBuy} == true ? '' : 'not-buy'">
                                 <div class="ask-text left-content">
                                     <th:block th:if="${product.promotionPrice}">
