update code: view

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,6 +1,15 @@
 <th:block th:fragment="header">
     <header class="header bg-dark">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="shop/css/style.min.css" type="text/css">
+<!--        <link rel="stylesheet" th:href="@{/shop/css/style.min.css}" />-->
+        <div class="announcement-bar-spp">
+            <p class="vertical-scrolling-text">
+                <a href="http://localhost:8082/san-pham"  class="text-white font1">[24.07 - 31.07] Lương về Deal cực mê - Giảm 15% cho đơn 999.000 VNĐ&gt;&gt; XEM NGAY</a>
+                <a href="http://localhost:8082/san-pham"   class="text-white font1">[21.07 - 31.07] ƯU ĐÃI MÙA TỰU TRƯỜNG - Giảm 30% nhiều sản phẩm trẻ em  &gt;&gt; XEM NGAY</a>
+                <a href="http://localhost:8082/san-pham"  class="text-white font1">[01.07 - 31.07] Tận Hưởng Cuộc Hành Trình - Giảm 40% tất cả sản phẩm Spartan &gt;&gt; XEM NGAY</a>
+            </p>
+        </div>
+
         <div class="header-middle">
             <div class="container">
                 <div class="header-left col-lg-2 w-auto pl-0">
