--- a/src/main/resources/templates/shop/index.html
+++ b/src/main/resources/templates/shop/index.html
@@ -17,7 +17,41 @@
 </head>
 <body>
 <main class="main" id="main-content">
+<!--    <div class="home-slider owl-carousel owl-theme owl-carousel-lazy show-nav-hover nav-big mb-2 text-uppercase" data-owl-options="{-->
+<!--				'loop': false-->
+<!--			}">-->
+<!--        <div class="home-slide home-slide2 banner banner-md-vw">-->
+<!--            <img class="owl-lazy slide-bg" th:src="@{/shop/images/slider/632669.jpg}" data-src="shop/images/slider/632669.jpg" alt="slider image">-->
+<!--            <div class="container">-->
+<!--                <div class="banner-layer banner-layer-middle d-flex justify-content-center">-->
+<!--                    <div class="mx-auto">-->
+<!--                        <h4 class="m-b-1">Extra</h4>-->
+<!--                        <h3 class="m-b-2">20% off</h3>-->
+<!--                        <h3 class="mb-2 heading-border">Accessories</h3>-->
+<!--                        <h2 class="text-transform-none m-b-4">Summer Sale</h2>-->
+<!--                        <a href="http://localhost:8082/san-pham" class="btn btn-block btn-dark">Shop All Sale</a>-->
+<!--                    </div>-->
+<!--                </div>&lt;!&ndash; End .banner-layer &ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>&lt;!&ndash; End .home-slide &ndash;&gt;-->
+<!--        <div class="home-slide home-slide1 banner">-->
+<!--            <img class="owl-lazy slide-bg" th:src="@{/shop/images/slider/vans.jpg}"-->
+<!--                 data-src="shop/images/slider/vans.jpg" alt="slider image">-->
+<!--            <div class="container">-->
+<!--                <div class="banner-layer banner-layer-middle">-->
+<!--                    <h4 class="text-transform-none m-b-3">Find the Boundaries. Push Through!</h4>-->
+<!--                    <h2 class="text-transform-none mb-0">Summer Sale</h2>-->
+<!--                    <h3 class="m-b-3">70% Off</h3>-->
+<!--                    <h5 class="d-inline-block mb-0">-->
+<!--                        Starting At-->
+<!--                        <b class="coupon-sale-text ml-4 mr-1 text-white bg-secondary align-middle">$<em class="align-text-top">199</em>99</b>-->
+<!--                    </h5>-->
+<!--                </div>&lt;!&ndash; End .banner-layer &ndash;&gt;-->
+<!--            </div>-->
+<!--        </div>&lt;!&ndash; End .home-slide &ndash;&gt;-->
 
+
+<!--    </div>&lt;!&ndash; End .home-slider &ndash;&gt;-->
 
     <div class="container">
         <div class="info-boxes-slider owl-carousel owl-theme mb-2" data-owl-options="{
@@ -36,8 +70,8 @@
                 <i class="icon-shipping"></i>
 
                 <div class="info-box-content">
-                    <h4>FREE SHIPPING &amp; RETURN</h4>
-                    <p class="text-body">Free shipping on all orders over $99.</p>
+                    <h4>Miễn phí ship &amp; Đổi trả 15 ngày</h4>
+                    <p class="text-body">Miễn phí giao hàng đơn từ 699k.</p>
                 </div><!-- End .info-box-content -->
             </div><!-- End .info-box -->
 
@@ -45,8 +79,8 @@
                 <i class="icon-money"></i>
 
                 <div class="info-box-content">
-                    <h4>MONEY BACK GUARANTEE</h4>
-                    <p class="text-body">100% money back guarantee</p>
+                    <h4>Chất lượng sản phẩm</h4>
+                    <p class="text-body">Cam kết 100% chính hãng</p>
                 </div><!-- End .info-box-content -->
             </div><!-- End .info-box -->
 
@@ -54,8 +88,8 @@
                 <i class="icon-support"></i>
 
                 <div class="info-box-content">
-                    <h4>ONLINE SUPPORT 24/7</h4>
-                    <p class="text-body">Lorem ipsum dolor sit amet.</p>
+                    <h4>Trả góp 0%</h4>
+                    <p class="text-body">Hỗ trợ khách hàng 24/7.</p>
                 </div><!-- End .info-box-content -->
             </div><!-- End .info-box -->
         </div><!-- End .info-boxes-slider -->
